# t2o-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  manage.py  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: general.py  health.py  precipitation.py  temperature.py
app/cli/: commands.py
app/core/: config.py  exceptions.py  logging.py
app/db/: base.py  database.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: cb87d4ad7518_.py
app/models/: __init__.py  base.py  weather.py
app/repositories/: weather.py
app/schemas/: health.py  weather.py
app/services/: weather_stats.py
app/services/factories/: provider_factory.py
app/services/providers/: base.py
app/services/providers/openmeteo/: __init__.py  client.py  geocoding.py  weather.py
app/utils/cache/: manager.py  serializer.py
app/utils/cache/backends/: redis.py
app/worker/: __init__.py
app/worker/tasks/: data_cleanup.py  weather_import.py
tests/: conftest.py
tests/unit/api/: test_general.py  test_health.py  test_precipitation.py  test_temperature.py
tests/unit/repositories/: test_weather.py
tests/unit/services/: test_weather_stats.py
tests/unit/services/factories/: test_provider_factory.py
tests/unit/services/providers/openmeteo/: test_client.py  test_geocoding.py  test_weather.py
tests/unit/utils/: test_cache.py
